force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__AssessmentQuestionVersionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentQuestionVersionId__c</fullName>
    <label>Assessment Question Version</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentQuestionVersionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>