force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__MultiselectResponseValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__MultiselectResponseValueText__c</fullName>
    <label>Multiselect Response Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MultiselectResponseValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>