force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ParentAsmtQuestionVersionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentAsmtQuestionVersionId__c</fullName>
    <label>Parent Assessment Question Version</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentAsmtQuestionVersionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>