force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__rel_1720291272838_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291272838_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentQuestionResponse_Assessmen_rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>AssessmentQuestionResponse_Assessmen_rel</relationshipLabel>
    <relationshipName>rel_1720291272838_end</relationshipName>
    <type>Lookup</type>
</CustomField>