force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__rel_1720291820096_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291820096_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentQuestionResponse_ParentAsm_rel</label>
    <referenceTo>ssot__AssessmentQuestionVersion__dlm</referenceTo>
    <relationshipLabel>AssessmentQuestionResponse_ParentAsm_rel</relationshipLabel>
    <relationshipName>rel_1720291820096_end</relationshipName>
    <type>Lookup</type>
</CustomField>