force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__RespondentTimezoneText__c.field-meta.xml
<CustomField>
    <fullName>ssot__RespondentTimezoneText__c</fullName>
    <label>Respondent Timezone</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RespondentTimezoneText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>