force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseDataTypeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseDataTypeText__c</fullName>
    <label>Response Data Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseDataTypeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>