force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseText__c</fullName>
    <label>Response Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>