force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseValueBoolean__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseValueBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Value Boolean</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseValueBoolean</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>