force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseValueCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseValueCurrency__c</fullName>
    <label>Response Value Currency</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseValueCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>