force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseValueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseValueDateTime__c</fullName>
    <label>Response Value Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseValueDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>