force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseValueInteger__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseValueInteger__c</fullName>
    <label>Response Value Integer</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseValueInteger</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>