force-app/main/default/objects/ssot__AssessmentQuestionResponse__dlm/fields/ssot__ResponseValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponseValueText__c</fullName>
    <label>Response Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponseValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>